Add test with non-default constructor